Setting addition and removing some fruits

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 	  <div class="container">
-  <div class="itemApple item">
+  <div class="pointerApple item">
      <div class="apple"></div>
   </div>
-  <div class="itemOrange item">
+  <div class="pointerOrange item">
      <div class="orange"></div>
   </div>
   <div class="itemBanana item">
