Setting last changes and adding all ingredientes

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <div class="pointerOrange item">
      <div class="orange"></div>
   </div>
-  <div class="itemBanana item">
+  <div class="pointerBanana item">
      <div class="banana"></div>
      <div class="banana-line"></div>
   </div>
-  <div class="itemBlueberry item">
+  <div class="pointerBlueberry item">
     <div class="blueberry"></div>
   </div>
-  <div class="itemCherry item">
+  <div class="pointerCherry item">
     <div class="cherry cherry1"></div>
     <div class="cherry cherry2"></div>
     <div class="cherry-join"></div>
